# sector-backend

./: .gitignore  bots.py  config.py  main.py  pyproject.toml  storage.py  train_evo.py  train_hot_reload.py  train_selfplay.py  ui_html.py  world.py
config/: sim_config.json
models/: online_policy.pt
