[project]
name = "sector-backend"
version = "0.1.0"
description = "Distributed systems' project. Chaos ensues."
authors = [
    {name = "Josip Seketa",email = "jseketa@student.unipu.hr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
