[project]
name = "sector-backend"
version = "0.1.0"
description = "Distributed systems' project. Chaos ensues."
authors = [
    {name = "Josip Seketa", email = "jseketa@student.unipu.hr"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio (>=4.0.0,<5.0.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)"
]

[tool.poetry]
name = "sector-backend"
version = "0.1.0"
description = "Distributed systems' project. Chaos ensues."
authors = ["Josip Seketa <jseketa@student.unipu.hr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13"
asyncio = ">=4.0.0,<5.0.0"
fastapi = ">=0.124.2,<0.125.0"
uvicorn = { version = ">=0.38.0,<0.39.0", extras = ["standard"] }


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
